fix: production hardening — menus, Docker persistence, centralized config
- Replace onmouseleave with click-outside pattern for toggle menus
  (Message more-menu, HeaderBar pinned dropdown)
- Add persistent Docker volumes for uploads and data directories
- Centralize rate limits and JWT expiry as env vars (env.ts)
- Add startup validation warnings for insecure defaults
- Rewrite .env.example with organized sections and clear docs
- Pass ALLOWED_ORIGIN and MAX_FILE_SIZE through docker-compose

--- a/.env.example
+++ b/.env.example
@@ -1,37 +1,61 @@
-# virc environment configuration
-# Copy to .env and fill in values: cp .env.example .env
+# virc server configuration
+# Copy to .env and edit: cp .env.example .env
 
-# --- Required ---
+# ==============================================================================
+# REQUIRED — you must set these before running
+# ==============================================================================
 
-# Secret key for signing JWT tokens (used by virc-files)
+# Secret for signing JWT tokens. Generate with: openssl rand -base64 32
 JWT_SECRET=change-me-to-a-random-string
 
-# LiveKit API credentials (must match config/livekit/config.yaml keys section)
+# LiveKit API credentials. Must match config/livekit/config.yaml "keys" section.
 LIVEKIT_API_KEY=devkey
 LIVEKIT_API_SECRET=devsecret
 
-# --- Optional (defaults shown) ---
+# ==============================================================================
+# SERVER IDENTITY
+# ==============================================================================
 
-# MySQL root password for the history database
+# Display name shown to clients
+# SERVER_NAME=My virc Server
+
+# MySQL root password — must also match config/ergo/ircd.yaml datastore.mysql.password
 MYSQL_ROOT_PASSWORD=changeme
 
-# Ergo REST API endpoint (internal Docker network address)
+# ==============================================================================
+# NETWORKING
+# ==============================================================================
+
+# LiveKit WebSocket URL returned to clients (set to your LAN/public IP for remote access)
+# LIVEKIT_CLIENT_URL=ws://192.168.1.100:7880
+
+# Restrict CORS to a specific origin (leave empty to allow all)
+# ALLOWED_ORIGIN=https://chat.example.com
+
+# ==============================================================================
+# FILE UPLOADS
+# ==============================================================================
+
+# Max upload size in bytes (default: 25 MB)
+# MAX_FILE_SIZE=26214400
+
+# ==============================================================================
+# TUNING (defaults are sensible — only change if needed)
+# ==============================================================================
+
+# JWT lifetime in seconds (default: 3600 = 1 hour)
+# JWT_EXPIRY=3600
+
+# Ergo IRC server API (internal Docker address)
 # ERGO_API=http://ergo:8089
 
 # Bearer token for Ergo HTTP API (must match config/ergo/ircd.yaml bearer-tokens)
 # ERGO_API_TOKEN=sTcmero5do9UZFqJ8HYSpgnXUckvTLtnbY1uRYeU1Ak
 
-# LiveKit server URL (internal Docker network address)
-# LIVEKIT_URL=ws://livekit:7880
-
-# Port for the virc-files HTTP server
-# PORT=8080
-
-# Path to the virc.json config file (relative to virc-files working dir)
-# CONFIG_PATH=config/virc.json
-
-# LiveKit URL returned to clients for voice (set to LAN IP for LAN access)
-# LIVEKIT_CLIENT_URL=ws://localhost:7880
-
-# Server name displayed in the client
-# SERVER_NAME=
+# Rate limits (requests per window). Defaults are reasonable for most deployments.
+# RATE_LIMIT_AUTH_MAX=10
+# RATE_LIMIT_AUTH_WINDOW=900000
+# RATE_LIMIT_PREVIEW_MAX=30
+# RATE_LIMIT_UPLOAD_MAX=20
+# RATE_LIMIT_INVITE_MAX=10
+# RATE_LIMIT_WINDOW=60000
