fix: align channel history length with spec (2048 → 4096)
Cardinal: task_d68e9292-ee3

- Update channel-length from 2048 to 4096 in ircd.yaml to match PLAN.md spec
- Add comment documenting the rationale for the increased value
- Mark TODO item as completed

--- a/config/ergo/ircd.yaml
+++ b/config/ergo/ircd.yaml
@@ -970,7 +970,9 @@ history:
     enabled: true
 
     # how many channel-specific events (messages, joins, parts) should be tracked per channel?
-    channel-length: 2048
+    # Increased from default 2048 to match spec (PLAN.md > Ergo Configuration).
+    # More history = fewer CHATHISTORY round-trips on reconnect.
+    channel-length: 4096
 
     # how many direct messages and notices should be tracked per user?
     # Increased from default 256 — DMs are a core feature, not secondary.
