--- a/virc-client/src-tauri/Cargo.toml
+++ b/virc-client/src-tauri/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "virc"
+name = "accord"
 version = "0.1.0"
 description = "Discord-like chat on IRC"
 edition = "2021"
 rust-version = "1.77.2"
 
 [lib]
-name = "virc_lib"
+name = "accord_lib"
 crate-type = ["rlib"]
 
 [build-dependencies]
