refactor: rename virc->accord in virc-files tests, package.json, and Dockerfile
Cardinal: task_795f10a6-164

- Rename package from virc-files to accord-files in package.json
- Update all test helpers: JWT secret, server ID, issuer, audience
- Update config.test.ts endpoints from virc.json to accord.json
- Update auth.test.ts JWT verification and example domains
- Update middleware.test.ts expected issuer/server values
- Update invite.test.ts temp directory prefix
- Update Dockerfile user/group from virc to accord

--- a/virc-files/Dockerfile
+++ b/virc-files/Dockerfile
@@ -10,10 +10,10 @@ COPY src/ ./src/
 RUN apt-get update -qq && apt-get install -y -qq curl && rm -rf /var/lib/apt/lists/*
 
 # Run as non-root user
-RUN groupadd --system virc && useradd --system --gid virc --no-create-home virc \
+RUN groupadd --system accord && useradd --system --gid accord --no-create-home accord \
     && mkdir -p /app/uploads /app/data \
-    && chown -R virc:virc /app
-USER virc
+    && chown -R accord:accord /app
+USER accord
 
 EXPOSE 8080
 CMD ["bun", "run", "src/index.ts"]
