fix: voice track handling, reaction persistence, and UI corrections
- Use LiveKit track.attach()/detach() instead of raw MediaStreamTrack
  for camera preview — fixes camera toggle breaking after off/on cycle
- Fix reaction persistence in chathistory by handling TAGMSG within
  batch processing (toggle semantics for replayed events)
- Replace disconnect icon with proper phone-hangup SVG
- Move settings gear from HeaderBar to UserPanel
- Guard device-switching effects to only fire on actual device changes,
  preventing spurious switchActiveDevice calls that killed camera tracks
- Fix voice overlay auto-open logic: track count–based instead of
  dismissed flag, so overlay re-opens on new tracks after close
- Add svelte-kit sync step to CI before tests and svelte-check
- Return array snapshot from videoTracks getter for Svelte reactivity

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,10 @@ jobs:
         run: pnpm install --frozen-lockfile
         working-directory: accord-client
 
+      - name: Sync SvelteKit generated files
+        run: pnpm svelte-kit sync
+        working-directory: accord-client
+
       - name: Run tests
         run: pnpm vitest run
         working-directory: accord-client
@@ -72,6 +76,10 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+        working-directory: accord-client
+
+      - name: Sync SvelteKit generated files
+        run: pnpm svelte-kit sync
         working-directory: accord-client
 
       - name: Run svelte-check
