docs: update status.md, README, and config for completed features
Cardinal: task_1473f2ce-77e

- Rewrite status.md: move profiles, admin, threads, sounds, notifications,
  edit history, search filters, animations, ETag caching, and docs from
  "What's Missing" to "What's Done"; update test counts (922+276=1198)
- Update README.md: add new features (threads, edit history, notifications,
  admin panel, avatar profiles, expanded search), update project structure
  (profile/admin routes, profileStore), update test coverage table, update
  known deferrals, add Session 5 to build history, fix component/store counts
- Add ADMIN_ACCOUNTS to .env.example for discoverability
- Add data/ to .gitignore (covers profiles.json runtime data)

--- a/.env.example
+++ b/.env.example
@@ -39,6 +39,14 @@ MYSQL_ROOT_PASSWORD=
 # MYSQL_ERGO_PASSWORD=
 
 # ==============================================================================
+# ADMIN
+# ==============================================================================
+
+# Admin accounts — comma-separated list of Ergo account names.
+# These accounts can access /api/admin/* endpoints (stats, users, kick/ban, audit log).
+# ADMIN_ACCOUNTS=alice,bob
+
+# ==============================================================================
 # NETWORKING
 # ==============================================================================
 
