fix: resolve 5 UI/infra bugs and harden mention highlighting
- Remove focus-visible outline on message input textarea
- Stop escaping apostrophes in HTML (caused ' → &#39; display bug)
- Fix LiveKit LAN voice: set node_ip explicitly, disable use_external_ip
- Fix DM sidebar alignment (width: auto, align-items: center)
- Fix voice speaking highlight width (inline-flex + align-items: flex-start)
- Prevent highlightMentions from corrupting URLs containing @ or #
  by splitting HTML tags from text before running replacements
- Add LAN deployment comment to reference LiveKit config

--- a/config/livekit/config.yaml
+++ b/config/livekit/config.yaml
@@ -1,6 +1,9 @@
 ##
 # NOTE: docker-compose injects LiveKit config via LIVEKIT_CONFIG.
 # This file is a reference for manual LiveKit runs or customization.
+#
+# For LAN deployments, set use_external_ip: false and add node_ip
+# with your host's LAN address (see docker-compose.lan.yml).
 ##
 port: 7880
 rtc:
