--- a/docker-compose.lan.yml
+++ b/docker-compose.lan.yml
@@ -64,7 +64,8 @@ services:
           tcp_port: 7881
           port_range_start: 50060
           port_range_end: 50160
-          use_external_ip: true
+          use_external_ip: false
+          node_ip: ${LAN_IP:?set LAN_IP in .env}
         keys:
           ${LIVEKIT_API_KEY:?set LIVEKIT_API_KEY}: ${LIVEKIT_API_SECRET:?set LIVEKIT_API_SECRET}
         logging:
