fix: harden LAN deployment for browser and Tauri clients
Caddy: proxy LiveKit signaling through /livekit/* for TLS (browsers
require secure context for getUserMedia), add /caddy-health endpoint,
broaden CSP for cross-origin media/images, remove tls internal
(Caddy auto-handles based on SITE_ADDRESS format).

docker-compose.lan.yml: HTTPS via Caddy auto-certs with self-signed
CA, LiveKit client URL routed through Caddy (wss://IP/livekit/),
unexpose LiveKit signaling port 7880, add CA cert extraction docs.

room.ts: wrap startAudio() in try/catch so automatic reconnects
don't crash when browser lacks user gesture context.

.env.example: document firewall ports, LAN IP discovery commands,
DHCP warning, SERVER_ID stability guidance.

--- a/.env.example
+++ b/.env.example
@@ -31,9 +31,23 @@ ERGO_API_TOKEN=
 # ==============================================================================
 
 # Your machine's LAN IP address. REQUIRED when using docker-compose.lan.yml.
-# The LAN compose file derives LIVEKIT_CLIENT_URL and BASE_URL from this value.
+# The LAN compose file derives all network URLs from this value.
 # Not used by docker-compose.yml (dev mode).
+#
+# Find your LAN IP:
+#   Windows:  ipconfig | findstr IPv4
+#   Linux:    ip addr show | grep "inet "
+#   macOS:    ipconfig getifaddr en0
+#
+# IMPORTANT: If your IP changes (DHCP), update this value and restart.
+# For a stable setup, assign a static IP or set SERVER_ID below.
 # LAN_IP=192.168.1.100
+#
+# Firewall: these ports must be open on the host for LAN clients:
+#   TCP 443          — HTTPS (Caddy reverse proxy, all traffic)
+#   TCP 80           — HTTP redirect to HTTPS
+#   TCP 7881         — LiveKit media fallback (TCP)
+#   UDP 50060-50160  — LiveKit media (WebRTC audio/video)
 
 # ==============================================================================
 # SERVER IDENTITY
@@ -44,6 +58,7 @@ ERGO_API_TOKEN=
 
 # Stable server identifier used in JWTs and invite links (URL-safe).
 # Typically your public hostname (without scheme).
+# For LAN: set this to avoid JWT invalidation when LAN_IP changes (DHCP).
 # SERVER_ID=chat.example.com
 
 # MySQL password for the dedicated 'ergo' user (optional).
@@ -65,7 +80,9 @@ ERGO_API_TOKEN=
 # For LAN deployment, just set LAN_IP above. These are only needed for
 # custom setups (e.g. domain-based deployment, nginx, split-host).
 
-# Caddy site address. Set to your domain for automatic HTTPS, or :80 for plain HTTP.
+# Caddy site address. LAN compose sets this to LAN_IP automatically (HTTPS).
+# For domain-based deployment, set to your domain for Caddy auto-HTTPS.
+# Dev compose defaults to :80 (plain HTTP).
 # SITE_ADDRESS=:80
 
 # Max upload size in bytes (default: 25 MB)
