--- a/docker-compose.lan.yml
+++ b/docker-compose.lan.yml
@@ -1,10 +1,23 @@
 # LAN deployment — serves accord to other machines on your local network.
 #
 # Unlike docker-compose.yml (dev), this config:
-#   - Only exposes ports through Caddy (80) + LiveKit (7880, 7881, UDP)
+#   - Uses HTTPS with self-signed certs (required for browser voice/mic)
+#   - Exposes Caddy (443/80) + LiveKit media ports (7881 TCP, UDP range)
 #   - Requires LAN_IP in .env (your machine's LAN address, e.g. 192.168.1.100)
-#   - Automatically wires LIVEKIT_CLIENT_URL and BASE_URL from LAN_IP
-#   - Binds Ergo and accord-files to localhost only (not reachable directly from LAN)
+#   - Routes LiveKit signaling through Caddy for TLS
+#   - Binds Ergo and accord-files to localhost only (not reachable directly)
+#
+# TLS setup:
+#   Caddy generates a self-signed root CA on first run (persisted in caddy-data).
+#   - Browsers: accept the cert warning on first visit to https://<LAN_IP>.
+#   - Tauri/desktop: install the CA cert so WebView2 trusts the connection:
+#       docker compose -f docker-compose.lan.yml cp caddy:/data/caddy/pki/authorities/local/root.crt ./accord-ca.crt
+#     Then import accord-ca.crt into your OS trust store:
+#       Windows: certutil -addstore Root accord-ca.crt
+#       macOS:   sudo security add-trusted-cert -d -r trustRoot -k /Library/Keychains/System.keychain accord-ca.crt
+#       Linux:   sudo cp accord-ca.crt /usr/local/share/ca-certificates/ && sudo update-ca-certificates
+#
+# Firewall: ensure TCP 443, TCP 7881, and UDP 50060-50160 are open on the host.
 #
 # Usage:
 #   docker compose -f docker-compose.lan.yml up -d
@@ -54,7 +67,8 @@ services:
   livekit:
     image: livekit/livekit-server:v1.9.11
     ports:
-      - "7880:7880"
+      # Signaling (7880) NOT exposed — routed through Caddy at /livekit for TLS.
+      # Media ports must be exposed directly (WebRTC UDP/TCP bypasses the proxy).
       - "7881:7881"
       - "50060-50160:50060-50160/udp"
     environment:
@@ -88,13 +102,15 @@ services:
     environment:
       ERGO_API: http://ergo:8089
       ERGO_API_TOKEN: ${ERGO_API_TOKEN:?set ERGO_API_TOKEN}
-      LIVEKIT_CLIENT_URL: ws://${LAN_IP:?set LAN_IP in .env}:7880
+      # Client-facing LiveKit URL routes through Caddy for TLS
+      LIVEKIT_CLIENT_URL: wss://${LAN_IP:?set LAN_IP in .env}/livekit/
+      LIVEKIT_API_URL: http://livekit:7880
       LIVEKIT_API_KEY: ${LIVEKIT_API_KEY:?set LIVEKIT_API_KEY}
       LIVEKIT_API_SECRET: ${LIVEKIT_API_SECRET:?set LIVEKIT_API_SECRET}
       JWT_SECRET: ${JWT_SECRET:?set JWT_SECRET}
       SERVER_NAME: ${SERVER_NAME:-}
       SERVER_ID: ${SERVER_ID:-}
-      BASE_URL: http://${LAN_IP:?set LAN_IP in .env}
+      BASE_URL: https://${LAN_IP:?set LAN_IP in .env}
       MAX_FILE_SIZE: ${MAX_FILE_SIZE:-}
     volumes:
       - ./config/accord/accord.json:/app/config/accord.json:ro
@@ -116,14 +132,18 @@ services:
   caddy:
     image: caddy:2
     ports:
+      - "443:443"
       - "80:80"
     environment:
-      SITE_ADDRESS: ${SITE_ADDRESS:-:80}
+      # Bare IP as SITE_ADDRESS triggers Caddy auto-HTTPS with self-signed certs
+      SITE_ADDRESS: ${LAN_IP:?set LAN_IP in .env}
     volumes:
       - ./config/caddy/Caddyfile:/etc/caddy/Caddyfile
       - ./accord-client/build:/srv/accord
+      - caddy-data:/data
+      - caddy-config:/config
     healthcheck:
-      test: ["CMD-SHELL", "wget -qO- http://localhost:80 || exit 1"]
+      test: ["CMD-SHELL", "wget --no-check-certificate -qO- https://localhost/caddy-health || wget -qO- http://localhost/caddy-health || exit 1"]
       interval: 5s
       timeout: 3s
       start_period: 5s
@@ -140,3 +160,5 @@ volumes:
   mysql-data:
   accord-uploads:
   accord-data:
+  caddy-data:
+  caddy-config:
